==> peng-zhihui/L-ink_Card/DAP-Link/Firmware/src/source/hic_hal/atmel/sam3u2c/unused_usb_driver/usbd_SAM3U2C.c <==
#include "RTL.h"
#include "rl_usb.h"
#include "sam3u.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define UDPHS_EPTFIFO_BASE (0x20180000) /* (UDPHS_EPTFIFO) Base Address       */

void USBD_Init (void) {
  uint32_t n;

  /* Enables the 48MHz USB Clock UDPCK and System Peripheral USB Clock        */
  PMC->PMC_WPMR = 0x504D4300;                              /* Disable write protect  */
  PMC->PMC_PCER0  = (1 << ID_UDPHS);                       /* enable clock for UPDHS */
  PMC->CKGR_UCKR  = (CKGR_UCKR_UPLLCOUNT(15) | CKGR_UCKR_UPLLEN);
  while (!(PMC->PMC_SR & PMC_SR_LOCKU));                   /* wait until PLL is locked */
  PMC->PMC_WPMR = 0x504D4301;                              /* Enable write protect */

  /* Configure the pull-up on D+ and disconnect it                            */
  UDPHS->UDPHS_CTRL |= UDPHS_CTRL_DETACH;         /* Detach                   */
  UDPHS->UDPHS_CTRL |= UDPHS_CTRL_PULLD_DIS;      /* Disable Pull Down        */

  /* Reset IP UDPHS                                                           */
  UDPHS->UDPHS_CTRL &= ~UDPHS_CTRL_EN_UDPHS;
  UDPHS->UDPHS_CTRL |=  UDPHS_CTRL_EN_UDPHS;

#if (!USBD_HS_ENABLE)                             /* If HS disabled           */
  UDPHS->UDPHS_TST  |=  (3 & UDPHS_TST_SPEED_CFG_Msk);
#endif

  /* Disable DMA for UDPHS                                                    */
  for (n = 1; n < (UDPHSDMA_NUMBER); n++) {
    /* RESET endpoint canal DMA:                                              */
    UDPHS->UDPHS_DMA[n].UDPHS_DMACONTROL = 0;     /* STOP command             */
    /* Disable endpoint                                                       */
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCTLDIS  = 0xFFFFFFFF;
    /* Clear status endpoint                                                  */
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCLRSTA  = 0xFFFFFFFF;
    /* Reset endpoint config                                                  */
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCTLENB  = 0;
    /* Reset DMA channel (Buff count and Control field)                       */
    UDPHS->UDPHS_DMA[n].UDPHS_DMACONTROL = (0x1 << 1);    /* NON STOP command */
    /* Reset DMA channel 0 (STOP)                                             */
    UDPHS->UDPHS_DMA[n].UDPHS_DMACONTROL = 0;             /* STOP command     */
    /* Clear DMA channel status (read the register for clear it)              */
    UDPHS->UDPHS_DMA[n].UDPHS_DMASTATUS =  UDPHS->UDPHS_DMA[n].UDPHS_DMASTATUS;
  }

  UDPHS->UDPHS_IEN     = 0;
  UDPHS->UDPHS_CLRINT  = UDPHS_CLRINT_UPSTR_RES |
                         UDPHS_CLRINT_ENDOFRSM  |
                         UDPHS_CLRINT_WAKE_UP   |
                         UDPHS_CLRINT_ENDRESET  |
                         UDPHS_CLRINT_INT_SOF   |
                         UDPHS_CLRINT_MICRO_SOF |
                         UDPHS_CLRINT_DET_SUSPD;

  USBD_IntrEna();                       /* Enable USB interrupt               */
}

void USBD_Connect (BOOL con) {
  if (con) {
    UDPHS->UDPHS_CTRL &= ~UDPHS_CTRL_DETACH;          /* Pull Up on DP        */
    UDPHS->UDPHS_CTRL |=  UDPHS_CTRL_PULLD_DIS;       /* Disable Pull Down    */
  } else {
    UDPHS->UDPHS_CTRL |=  UDPHS_CTRL_DETACH;          /* Detach               */
    UDPHS->UDPHS_CTRL &= ~UDPHS_CTRL_PULLD_DIS;       /* Enable Pull Down     */
  }
}

void USBD_Reset (void) {
  uint32_t ep, EPMask;

  EPMask = ((1 << (USBD_EP_NUM+1)) - 1);

  /* Reset & Disable USB Endpoints                                            */
  for (ep = 0; ep <= USBD_EP_NUM; ep++) {
    UDPHS->UDPHS_EPT[ep].UDPHS_EPTCFG    =  0;
    UDPHS->UDPHS_EPT[ep].UDPHS_EPTCTLDIS = (0x1 <<  0);     /* Disable EP     */
  }
  UDPHS->UDPHS_EPTRST = EPMask;                             /* Reset   EPs    */
  UDPHS->UDPHS_EPTRST = 0;

  /* Setup USB Interrupts */               /* note: Micro_SOF not yet handled */
#ifdef __RTX
  UDPHS->UDPHS_IEN = ((USBD_RTX_DevTask     != 0) ? UDPHS_IEN_DET_SUSPD : 0) |
                     ((USBD_RTX_DevTask     != 0) ? UDPHS_IEN_MICRO_SOF : 0) |
                     ((USBD_RTX_DevTask     != 0) ? UDPHS_IEN_INT_SOF   : 0) |
                     ((USBD_RTX_DevTask     != 0) ? UDPHS_IEN_ENDRESET  : 0) |
//                   ((USBD_RTX_DevTask     != 0) ? UDPHS_IEN_WAKE_UP   : 0) |
//                   ((USBD_RTX_DevTask     != 0) ? UDPHS_IEN_UPSTR_RES : 0) |
#else
  UDPHS->UDPHS_IEN = ((USBD_P_Suspend_Event != 0) ? UDPHS_IEN_DET_SUSPD : 0) |
                     ((USBD_P_SOF_Event     != 0) ? UDPHS_IEN_MICRO_SOF : 0) |
                     ((USBD_P_SOF_Event     != 0) ? UDPHS_IEN_INT_SOF   : 0) |
                     ((USBD_P_Reset_Event   != 0) ? UDPHS_IEN_ENDRESET  : 0) |
//                   ((USBD_P_WakeUp_Event  != 0) ? UDPHS_IEN_WAKE_UP   : 0) |
//                   ((USBD_P_Resume_Event  != 0) ? UDPHS_IEN_UPSTR_RES : 0) |
#endif
                     (EPMask << 8);

  /* Setup Control Endpoint 0                                                 */
  UDPHS->UDPHS_EPT[0].UDPHS_EPTCFG     = UDPHS_EPTCFG_BK_NUMBER_1            | 
                                         UDPHS_EPTCFG_EPT_TYPE_CTRL8         |
                                         USBD_CalcSizeEP(USBD_MAX_PACKET0)   ;
  UDPHS->UDPHS_EPT[0].UDPHS_EPTCTLENB  = UDPHS_EPTCTLENB_RXRDY_TXKL          |
                                         UDPHS_EPTCTLENB_TX_COMPLT           |
                                         UDPHS_EPTCTLENB_RX_SETUP            |
                                         UDPHS_EPTCTLENB_STALL_SNT           |
                                         UDPHS_EPTCTLENB_NYET_DIS            |
                                         UDPHS_EPTCTLENB_EPT_ENABL;
}

void USBD_Suspend (void) {
  UDPHS->UDPHS_IEN  &= ~UDPHS_IEN_DET_SUSPD;
  UDPHS->UDPHS_IEN  |=  UDPHS_IEN_WAKE_UP;
}

void USBD_Resume (void) {
  UDPHS->UDPHS_IEN  &= ~UDPHS_IEN_WAKE_UP;
  UDPHS->UDPHS_IEN  |=  UDPHS_IEN_DET_SUSPD;
}

void USBD_WakeUp (void) {
  UDPHS->UDPHS_IEN  |=  UDPHS_IEN_UPSTR_RES;
  UDPHS->UDPHS_CTRL |=  UDPHS_CTRL_REWAKEUP;
}

void USBD_SetAddress (uint32_t adr, uint32_t setup) {
  if (setup) return;
  if (adr) {
    UDPHS->UDPHS_CTRL |=  (UDPHS_CTRL_FADDR_EN | adr);
  } else {
    UDPHS->UDPHS_CTRL &= ~(UDPHS_CTRL_FADDR_EN | UDPHS_CTRL_DEV_ADDR_Msk);
  }
}

void USBD_EnableEP (uint32_t EPNum) {
  UDPHS->UDPHS_EPT[EPNum & 0x0F].UDPHS_EPTCTLENB = (0x1 << 0);  /* EP Enable  */
}

void USBD_DisableEP (uint32_t EPNum) {
  UDPHS->UDPHS_EPT[EPNum & 0x0F].UDPHS_EPTCTLDIS = (0x1 << 0);  /* EP Disable */
}

void USBD_ResetEP (uint32_t EPNum) {
  EPNum &= 0x0F;
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCLRSTA = (0x1 << 6) |  /* Data Toggle Clear*/
                                            (0x1 << 5);   /* Stall Req Set    */

  UDPHS->UDPHS_EPTRST |=  (1 << EPNum);                   /* Reset endpoint   */
  UDPHS->UDPHS_EPTRST &= ~(1 << EPNum);
}

void USBD_SetStallEP (uint32_t EPNum) {
  UDPHS->UDPHS_EPT[EPNum & 0x0F].UDPHS_EPTSETSTA = (0x1 << 5);  /* Stall Set  */
}

void USBD_ClrStallEP (uint32_t EPNum) {
  UDPHS->UDPHS_EPT[EPNum & 0x0F].UDPHS_EPTCLRSTA = (0x1 << 6) | /* Clr Toggle */
                                                   (0x1 << 5);  /* Stall Clear*/
}

uint32_t USBD_ReadEP (uint32_t EPNum, uint8_t *pData) {
  uint32_t cnt, n;
  uint8_t *pEPFIFO;                                /* Pointer to EP FIFO           */

  EPNum  &= 0x0F;
  pEPFIFO = (uint8_t *)((uint32_t *)UDPHS_EPTFIFO_BASE + (16384*EPNum));
  cnt     = (UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSTA >> 20) & 0x07FF;  /* Get by */
  for (n = 0; n < cnt; n++) {
    *pData++ = *pEPFIFO++;
  }
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCLRSTA = (0x1 << 9);   /* Rece OUT Clear   */

  /* RX_Setup must be cleared after Setup packet is read                      */
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCLRSTA = (0x1 << 12);  /* Rece SETUP Clear */

  UDPHS->UDPHS_IEN |= (1 << (EPNum + 8));     /* Enable EP int after data read*/

  return (cnt);
}

uint32_t USBD_WriteEP (uint32_t EPNum, uint8_t *pData, uint32_t cnt) {
  uint32_t n;
  uint8_t *pEPFIFO;                          /* Pointer to the endpoint FIFO       */

  EPNum &= 0x0F;
  if (UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSTA & (0x1 << 5)) {  /* If EP is stall */
    return (cnt);
  }

  if (UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSTA & (0x1 << 11)) { /* Bank not ready */
    return (0);
  }

  pEPFIFO = (uint8_t *)((uint32_t *)UDPHS_EPTFIFO_BASE + (16384*EPNum));
  for (n = 0; n < cnt; n++) {
    *pEPFIFO++ = *pData++;              /* Write data to FIFO                 */
  }

  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSETSTA = (0x1 << 11);  /* Set packet ready */

  return (cnt);
}

uint32_t USBD_GetFrame (void) {
  uint32_t val;

  if ((UDPHS->UDPHS_FNUM & (1UL << 31)) == 0) {
    if (USBD_HighSpeed) val = UDPHS->UDPHS_FNUM & 0x7FFFFFFF;
    else val = (UDPHS->UDPHS_FNUM & UDPHS_FNUM_FRAME_NUMBER_Msk) >> 3;
  } else {
    val = 0xFFFFFFFF;
  }

  return (val);
}
